--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Welcome Splash Screen with Curtain Effect -->
+    <div id="welcomeScreen" class="welcome-screen">
+        <div class="curtain curtain-left"></div>
+        <div class="curtain curtain-right"></div>
+        <div class="welcome-content">
+            <img src="images/swami-blessing.jpg" alt="Swami's Blessing" class="swami-image">
+            <h1 class="welcome-title">Om Sri Sai Ram</h1>
+            <p class="welcome-subtitle">Welcome to Premsadan Bhajans Planner</p>
+            <button class="enter-btn" onclick="openCurtains()">Enter</button>
+        </div>
+    </div>
+
     <div class="container">
         <!-- Header -->
         <header class="header">
@@ -129,16 +141,6 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <!-- SoundCloud player (kept aside for reference)
-            <iframe id="soundcloudPlayer"
-                width="100%"
-                height="166"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="">
-            </iframe>
-            -->
             <div id="noAudioMessage" class="no-audio-message" style="display: none;">
                 No audio available for the selected date.
             </div>
@@ -164,6 +166,18 @@
             <h2 class="section-title">Search Results</h2>
             <div id="resultsContainer" class="results-container"></div>
         </section>
+
+        <!-- Background Audio (commented out for future use)
+        <audio id="bgAudio" loop>
+            <source src="audios/16 Paramam.mp3" type="audio/mpeg">
+        </audio>
+        -->
+
+        <!-- Sound Toggle Button (commented out for future use)
+        <button id="soundToggle" class="sound-toggle" onclick="toggleSound()" title="Toggle Background Music">
+            🔇
+        </button>
+        -->
 
         <!-- Footer -->
         <footer class="footer">
