--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         </div>
     </div> -->
 
-    <script src="bhajans.js"></script>
+    <script src="bhajans/sundayBhajans.js"></script>
+    <script src="bhajans/thursdayBhajans.js"></script>
     <script src="audios.js"></script>
     <script src="script.js"></script>
 </body>
