--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
 
         <!-- Results Section -->
         <section id="resultsSection" class="results-section" style="display: none;">
-            <h2 class="section-title">Search Results</h2>
+            <div class="results-header">
+                <h2 class="section-title">Search Results</h2>
+                <button class="close-results-btn" onclick="closeResults()">✕ Close</button>
+            </div>
             <div id="resultsContainer" class="results-container"></div>
         </section>
 
@@ -223,6 +226,14 @@
             🔇
         </button>
         -->
+
+        <!-- Connect With Us Section -->
+        <section class="connect-section">
+            <span class="connect-title">Connect With Us at </span>
+            <a href="mailto:premsadanvizag@gmail.com" class="connect-email">
+                &#9993; premsadanvizag@gmail.com
+            </a>
+        </section>
 
         <!-- Footer -->
         <footer class="footer">
