--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
     <!-- ================================================================== -->
     <script src="bhajans/sundayBhajans.js"></script>
     <script src="bhajans/thursdayBhajans.js"></script>
+    <script src="bhajans/specialOccasions/bhogi 2026.js"></script>
+    <script src="bhajans/specialOccasions/sankranthi 2026.js"></script>
     <script src="audios.js"></script>
     <script src="script.js"></script>
 </body>
